[workspace]
members = [ "elements-rpc" ]

[package]
name = "baru"
version = "0.2.0"
authors = [ "CoBloX Team <team@coblox.tech>" ]
edition = "2018"
license-file = "LICENSE"
description = "Library to facilitate DeFi on Liquid"

[dependencies]
anyhow = "1"
bitcoin_hashes = "0.9.0"
conquer-once = "0.3"
elements = { version = "0.18", features = [ "serde-feature" ] }
elements-miniscript = { version = "0.1", features = [ "use-serde" ] }
env_logger = "0.8.3"
hex = "0.4"
hmac = "0.10"
log = "0.4"
rand = "0.6"
rust_decimal = "1"
secp256k1 = { version = "0.20", features = [ "bitcoin_hashes", "rand" ] }
# TODO: See if we can remove this direct dependency
secp256k1-zkp = { version = "0.4", features = [ "global-context", "hashes" ] }
serde = { version = "1", features = [ "derive" ] }
sha2 = "0.9"
thiserror = "1"

[dev-dependencies]
elements-harness = { git = "https://github.com/comit-network/elements-harness", rev = "0c28948c124d68e828e0f27c9202ba278dc04421" }
elements-rpc = { path = "./elements-rpc" }
rand_chacha = "0.1"
testcontainers = "0.12"
tokio = { version = "1", default-features = false, features = [ "macros" ] }
