[workspace]
members = ["rocket_sqlite_oracle"]

[package]
name = "baru"
version = "0.2.0"
authors = ["CoBloX Team <team@coblox.tech>"]
edition = "2018"
license-file = "LICENSE"
description = "Library to facilitate DeFi on Liquid"

[dependencies]
anyhow = "1"
bitcoin_hashes = "0.9.0"
conquer-once = "0.3"
elements = { version = "0.18", features = ["serde-feature"] }
elements-miniscript = { version = "0.1", features = ["use-serde"] }
env_logger = "0.8.3"
hex = "0.4"
hmac = "0.10"
log = "0.4"
rand = "0.6"
rust_decimal = "1"
serde = { version = "1", features = ["derive"] }
sha2 = "0.9"
thiserror = "1"

[dev-dependencies]
elements-consensus = { git = "https://github.com/comit-network/rust-elements-consensus", rev = "ac88dbedcd019eef44f58499417dcdbeda994b0b" }
link-cplusplus = "1"
rand_chacha = "0.1"
tokio = { version = "1", default-features = false, features = ["macros", "rt"] }
